--- a/src/02-components-patterns/styles/custom-styles.css
+++ b/src/02-components-patterns/styles/custom-styles.css
@@ -1,24 +1,30 @@
 .bg-dark {
-    background-color: rgb(56, 56, 56);
+   background-color: rgb(56,56,56); 
 }
 
 .text-white {
     color: white;
 }
 
+.text-bold {
+    font-weight: bold;
+}
+
 .custom-image {
     border-radius: 20px;
     padding: 10px;
-    width: calc(100% - 20px);
+    width: calc( 100% - 20px );
 }
+
 
 .custom-buttons button, .custom-buttons div {
-    color: #fff;
-    border-color: #fff;
+    color: white;
+    border-color: white;
 }
 
+
 .shopping-cart {
-    position: fixed;
+    position: fixed;   
     right: 10px;
     top: 0px;
 }
